--- a/css/stayles.css
+++ b/css/stayles.css
@@ -37,6 +37,7 @@ body{
 }
 .header{
     border-bottom: 1px solid #E7E9FC;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .header_list{
     display: flex;
@@ -104,7 +105,7 @@ body{
 }
 
 .caption{
-    width: max-content;
+    max-width: 1440px;
     margin: 0 auto;
     background-image: 
     linear-gradient(rgba(46, 47, 66, 0.7),
@@ -137,6 +138,7 @@ body{
     padding: 16px 32px;
     border-radius: 4px;
     border: 1px solid transparent;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 .caption_btn:hover, .caption_btn:focus{
     background: #404BBF;
@@ -163,9 +165,8 @@ body{
     border-radius: 4px;
     margin-bottom: 8px;
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
-    align-content: space-around;
+    align-items: center;
 }
 .hero_list_item_icon_svg{
     width: 64px;
@@ -272,9 +273,20 @@ body{
     height: 88px;
     border: 1px solid #8E8F99;
     border-radius: 4px;
+    fill: #8E8F99;
 }
-.logo_list_item_border_svg{
-
+.logo-list-item-link{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.logo_list_item:hover,
+.logo_list_item:focus{
+    border-color: #404BBF;
+    border-radius: 4px;
+    fill: #404BBF;
 }
 .customers{
     padding-top: 130px;
@@ -311,6 +323,10 @@ body{
     display: flex;
     gap: 16px;
     margin-top: 16px;
+}
+.box_list_social_link_footer:hover,
+.box_list_social_link_footer:focus {
+    background-color: #31D0AA;
 }
 .social_media_link{
     margin-left: 120px;
@@ -381,15 +397,10 @@ body{
 .section_items {
     width: calc((100% - 48px)/3);
 }
-.section_items:hover,
-.section_items:focus{
-    border: 1px solid #F4F4FD;
+.section_items_link:hover,
+.section_items_link:focus {
+    display: block;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-.section_items:hover a div{
-    border-bottom: 1px solid transparent;
-    border-left: 1px solid transparent;
-    border-right: 1px solid transparent;
 }
 .section_items_title{
     font-weight: 500;
